--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,6 +7,6 @@ steps:
 
 # This step will deploy the new container image to cloud run
 - name: 'gcr.io/cloud-builders/gcloud'
-  args: ['run', 'deploy', 'gke-sample-app-service',
+  args: ['run', 'deploy', 'gke-sample-app',
          '--image=us-east1-docker.pkg.dev/assignment-kubernetes-390016/assignment-kubernetes/gke-sample-app',
          '--region=us-east1', '--allow-unauthenticated']
