--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,7 +8,7 @@ steps:
 # This step will deploy the new container image to cloud run
 - name: 'gcr.io/cloud-builders/gcloud'
   args: ['run', 'deploy', 'gke-sample-app',
-         '--image=us-east1-docker.pkg.dev/assignment-kubernetes-390016/assignment-kubernetes/gke-sample-app',
-         '--region=us-east1', '--allow-unauthenticated']
+         '--image', 'us-east1-docker.pkg.dev/assignment-kubernetes-390016/assignment-kubernetes/gke-sample-app',
+         '--region', 'us-east1', '--allow-unauthenticated', '--platform', 'managed']
 images:
 - 'us-east1-docker.pkg.dev/assignment-kubernetes-390016/assignment-kubernetes/gke-sample-app:latest'
