--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,16 +5,10 @@ steps:
 - name: 'gcr.io/cloud-builders/docker'
   args: ['push', 'us-east1-docker.pkg.dev/assignment-kubernetes-390016/assignment-kubernetes/container1:latest']
 
-## This step will deploy the new container image to cloud run
-#- name: 'gcr.io/cloud-builders/gcloud'
-#  args:
-#    - 'run'
-#    - 'deploy'
-#    - 'gke-sample-app'
-#    - '--image'
-#    - 'us-east1-docker.pkg.dev/assignment-kubernetes-390016/assignment-kubernetes/gke-sample-app:latest'
-#    - '--region'
-#    - 'us-east1'
-
+- name: 'gcr.io/cloud-builders/kubectl'
+  args:
+    - 'apply'
+    - '-f'
+    - 'deployment.yaml'
 images:
 - 'us-east1-docker.pkg.dev/assignment-kubernetes-390016/assignment-kubernetes/container1:latest'
