--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -10,5 +10,8 @@ steps:
     - 'apply'
     - '-f'
     - 'deployment.yaml'
+  env:
+    - 'CLOUDSDK_COMPUTE_REGION=us-east1'
+    - 'CLOUDSDK_CONTAINER_CLUSTER=ronils-cluster'
 images:
 - 'us-east1-docker.pkg.dev/assignment-kubernetes-390016/assignment-kubernetes/container1:latest'
